Site name changed, logo changed and button border color changed

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ button {
   color: white;
   background-color: #171717;
   border-radius: 10px;
-  border: 2px solid #9dffad;
+  border: 2px solid #f26c4f;
   cursor: pointer;
 }
 
