--- a/styles.css
+++ b/styles.css
@@ -152,12 +152,12 @@ button {
 }
 
 .card {
-  width: 100%;
-  height: 100%;
+  width: 30%;
+  min-height: 100%;
   padding: 50px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
@@ -170,6 +170,10 @@ button {
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
+.history-data{
+  margin-top: 15px;
+}
+
 
 #modal-background {
   background: rgb(255, 255, 255);
@@ -191,6 +195,7 @@ button {
     width: 100%;
   }
   .card {
+    width: 100%;
     flex-direction: column;
   }
 }
