--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -8,7 +9,7 @@ body {
   background-image: url("./bg.png");
   background-size: cover;
   background-position: left top;
-  font-family: "Zilla Slab", serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .box-container {
