--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ button {
 #histories {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .card {
