--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,27 @@ body {
   width: 70%;
   margin: 0 auto;
 }
-
+.blog-container{
+  width: 90%;
+  margin: 0 auto;
+}
+/*Navigation Menu*/
+.menu{
+  text-decoration: none;
+  color:#fff;
+  font-weight: 700;
+  position: absolute;
+  top:10;
+  right: 0;
+  background-color: #F26C4F;
+  padding:10px 20px;
+  border-radius: 5px;
+  margin-right: 10px;
+  transition: 0.3s all ease-in-out;
+}
+.menu:hover{
+  background-color: #d65133;
+}
 #question {
   height: 100px;
   display: flex;
@@ -151,7 +171,11 @@ button {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-
+#blog-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 .card {
   width: 30%;
   min-height: 100%;
@@ -189,7 +213,18 @@ button {
   position: fixed;
   top: 0;
 }
-
+/* Blog Page styling */
+.code{
+  color:#DE5253;
+}
+.blog-description{
+  margin: 15px 0px;
+}
+.blog-meta{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 @media only screen and (max-width: 700px) {
   .box-container {
     padding: 0 20px;
